Create template for Cuisines and function to display on front end

--- a/recipestore/templates/add_cuisine.html
+++ b/recipestore/templates/add_cuisine.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<section class="page-section">
+<section>
     <div class="container">
         <!-- Add Cuisine Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Add Cuisine</h2>
