--- a/recipestore/templates/cuisines.html
+++ b/recipestore/templates/cuisines.html
@@ -1,7 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>Cuisines</h3>
+<div class="container">
+    <!-- Add Cuisine Section Heading-->
+    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Cuisines</h2>
+    <!-- Icon Divider-->
+    <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon"><i class="fas fa-earth-americas"></i></div>
+        <div class="divider-custom-line"></div>
+    </div>
+</div>
+
+<div class="container-fluid d-flex">
+    <div class="row align-items-center justify-content-center">
+        {% for cuisine in cuisines %}
+        <div class="card col-md-6 col-lg-4 mb-5 align-items-center" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title text-center">{{ cuisine.cuisine_name }}</h5>
+              <a href="#" class="btn btn-primary">View Recipes</a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
 
 {% endblock %}
+
+
