Create view recipe function and page to display recipe

--- a/recipestore/templates/add_cuisine.html
+++ b/recipestore/templates/add_cuisine.html
@@ -8,7 +8,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fas fa-earth-americas"></i></div>
+            <div class="divider-custom-icon"><i class="fa-solid fa-plus"></i></div>
             <div class="divider-custom-line"></div>
         </div>
         <!-- Add Cuisine Form-->
@@ -21,7 +21,7 @@
                             placeholder="Enter name of cuisine..." required />
                         <label for="cuisine_name">Cuisine</label>
                     </div>
-                    <div>
+                    <div class="d-flex justify-content-center">
                          <!-- Submit Button-->
                     <button class="btn btn-primary" type="submit">Add</button>
                     </div>
