--- a/recipestore/templates/view_recipe.html
+++ b/recipestore/templates/view_recipe.html
@@ -20,6 +20,11 @@
     </ul>
     </div>
 </div>
+<div class="d-flex justify-content-center">
+    <!-- Submit Button-->
+    <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn btn-primary" role="button">Edit</a>
+    <button class="btn btn-danger" type="submit">Delete</button>
+</div>
 
 
 {% endblock %}
