--- a/recipestore/templates/view_recipe.html
+++ b/recipestore/templates/view_recipe.html
@@ -23,7 +23,7 @@
 <div class="d-flex justify-content-center">
     <!-- Submit Button-->
     <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn btn-primary" role="button">Edit</a>
-    <button class="btn btn-danger" type="submit">Delete</button>
+    <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn btn-danger" role="button">Delete</a>
 </div>
 
 
