--- a/recipestore/templates/base.html
+++ b/recipestore/templates/base.html
@@ -13,7 +13,7 @@
 <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-        <div class="container">
+        <div class="nav-bar">
             <a class="navbar-brand" href="{{ url_for('home') }}">Recipe Store</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -30,14 +30,14 @@
         </div>
     </nav>
     <!-- Masthead-->
-    <header class="masthead bg-success text-white text-center">
+    <header class="masthead bg-secondary text-center header-image">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Heading-->
-            <h1 class="masthead-heading text-uppercase mb-0">Recipe Store</h1>
+            <h1 class="masthead-heading text-uppercase text-secondary mb-0">Recipe Store</h1>
             <!-- Icon Divider-->
-            <div class="divider-custom divider-light">
+            <div class="divider-custom text-secondary">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fa-solid fa-utensils"></i></i></div>
+                <div class="divider-custom-icon"><i class="fa-solid fa-utensils fa-xl"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
@@ -53,7 +53,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-earth-americas"></i></div>
+                <div class="divider-custom-icon"><i class="fa-solid fa-book-open fa-sm"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
         </div>
@@ -72,40 +72,11 @@
         {% endblock %}
     </main>
     <!-- Footer-->
-    <footer class="footer text-center">
-        <div class="container">
-            <div class="row">
-                <!-- Footer Location-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Location</h4>
-                    <p class="lead mb-0">
-                        Lorem Ipsum
-                        <br />
-                        Lorem Ipsum
-                    </p>
-                </div>
-                <!-- Footer Social Icons-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Around the Web</h4>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
-                </div>
-                <!-- Footer About Text-->
-                <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-4">About Freelancer</h4>
-                    <p class="lead mb-0">
-                        Lorem Ipsum
-                    </p>
-                </div>
-            </div>
+    <footer class="text-center">
+        <div class="copyright py-4 text-center text-white">
+            <div class="container"><small>For educational purposes only</small></div>
         </div>
     </footer>
-    <!-- Copyright Section-->
-    <div class="copyright py-4 text-center text-white">
-        <div class="container"><small>For educational purposes only</small></div>
-    </div>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
