Fix errors detected by W3C Validation Service

--- a/recipestore/templates/add_cuisine.html
+++ b/recipestore/templates/add_cuisine.html
@@ -17,15 +17,14 @@
                 <form id="contactForm" method="POST" action="{{url_for('add_cuisine')}}">
                     <!-- Name input-->
                     <div class="mb-3">
-                        <input class="form-control validate" id="cuisine_name" name="cuisine_name" minlength="3" maxlength="30" type="text"
-                            placeholder="Enter name of cuisine..." required />
+                        <input class="form-control validate" id="cuisine_name" name="cuisine_name" minlength="3"
+                            maxlength="30" type="text" placeholder="Enter name of cuisine..." required />
                         <label for="cuisine_name">Cuisine</label>
                     </div>
                     <div class="d-flex justify-content-center">
-                         <!-- Submit Button-->
-                    <button class="btn btn-primary" type="submit">Add</button>
+                        <!-- Submit Button-->
+                        <button class="btn btn-primary" type="submit">Add</button>
                     </div>
-                   
                 </form>
             </div>
         </div>
