--- a/recipestore/templates/cuisines.html
+++ b/recipestore/templates/cuisines.html
@@ -7,7 +7,7 @@
     <!-- Icon Divider-->
     <div class="divider-custom">
         <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon"><i class="fas fa-earth-americas"></i></div>
+        <div class="divider-custom-icon"><i class="fas fa-earth-americas fa-sm"></i></div>
         <div class="divider-custom-line"></div>
     </div>
 </div>
@@ -18,7 +18,6 @@
         <div class="card col-md-6 col-lg-4 mb-5 align-items-center" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title text-center">{{ cuisine.cuisine_name }}</h5>
-              <a href="#" class="btn btn-primary">View Recipes</a>
             </div>
         </div>
         {% endfor %}
