--- a/recipestore/templates/view_recipe.html
+++ b/recipestore/templates/view_recipe.html
@@ -4,26 +4,32 @@
 
 <div class="container">
     <div class="row">
-    <!-- Recipe Name Section Heading-->
-    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">{{ recipe.recipe_name }}</h2>
-    <!-- Icon Divider-->
-    <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon"><i class="fa-solid fa-kitchen-set"></i></div>
-        <div class="divider-custom-line"></div>
-</div>
-<div class="container">
-    <ul class="list-group">
-        <li class="list-group-item"><strong>Total Time: </strong>{{ recipe.recipe_time }} minutes</li>
-        <li class="list-group-item"><strong>Ingredients: </strong>{{ recipe.recipe_ingredients }}</li>
-        <li class="list-group-item"><strong>Preparation: </strong>{{ recipe.recipe_preparation }}</li>
-    </ul>
+        <!-- Recipe Name Section Heading-->
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">{{ recipe.recipe_name }}</h2>
+        <!-- Icon Divider-->
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fa-solid fa-kitchen-set"></i></div>
+            <div class="divider-custom-line"></div>
+
+        </div>
+    </div>
+    <div class="container">
+        <ul class="list-group">
+            <li class="list-group-item"><strong>Total Time: </strong>{{ recipe.recipe_time }} minutes</li>
+            <li class="list-group-item"><strong>Ingredients: </strong>{{ recipe.recipe_ingredients }}</li>
+            <li class="list-group-item"><strong>Preparation: </strong>{{ recipe.recipe_preparation }}</li>
+        </ul>
     </div>
 </div>
-<div class="d-flex justify-content-center">
-    <!-- Submit Button-->
-    <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn btn-primary" role="button">Edit</a>
-    <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn btn-danger" role="button">Delete</a>
+<div class="container d-flex justify-content-center">
+    <div class="row">
+        <div>
+            <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn btn-primary" role="button">Edit</a>
+            <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn btn-danger"
+                role="button">Delete</a>
+        </div>
+    </div>
 </div>
 
 
