Add cuisine field to view recipe

--- a/recipestore/templates/view_recipe.html
+++ b/recipestore/templates/view_recipe.html
@@ -16,6 +16,7 @@
     </div>
     <div class="container">
         <ul class="list-group">
+            <li class="list-group-item"><strong>Cuisine: </strong>{{ recipe.cuisine }}</li>
             <li class="list-group-item"><strong>Total Time: </strong>{{ recipe.recipe_time }} minutes</li>
             <li class="list-group-item"><strong>Ingredients: </strong>{{ recipe.recipe_ingredients }}</li>
             <li class="list-group-item"><strong>Preparation: </strong>{{ recipe.recipe_preparation }}</li>
