Increase min-height of textarea on forms

--- a/recipestore/static/css/style.css
+++ b/recipestore/static/css/style.css
@@ -2203,6 +2203,7 @@ progress {
     transition: none;
   }
 }
+
 .form-control[type=file] {
   overflow: hidden;
 }
@@ -11553,4 +11554,42 @@ html {
 	.navbar-collapse {
 		background-color: transparent !important;
 	}	
+}
+
+.new-box {
+  min-height: 100px;
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 0.125rem solid #ced4da;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 0.5rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.edit-box {
+  min-height: 150px;
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 0.125rem solid #ced4da;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 0.5rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
