--- a/recipestore/templates/add_recipe.html
+++ b/recipestore/templates/add_recipe.html
@@ -38,13 +38,13 @@
                     </div>
                     <!-- Ingredients input-->
                     <div class="mb-3">
-                        <textarea class="form-control validate" id="recipe_ingredients" name="recipe_ingredients" minlength="10" maxlength="1000"
+                        <textarea class="new-box validate" id="recipe_ingredients" name="recipe_ingredients" minlength="10" maxlength="1000"
                         placeholder="Enter ingredients..." required></textarea>
                         <label for="recipe_ingredients">Ingredients</label>
                     </div>
                     <!-- Preparation input-->
                     <div class="mb-3">
-                        <textarea class="form-control validate" id="recipe_preparation" name="recipe_preparation" minlength="10" maxlength="5000"
+                        <textarea class="new-box validate" id="recipe_preparation" name="recipe_preparation" minlength="10" maxlength="5000"
                         placeholder="Enter preparation..." required></textarea>
                         <label for="recipe_preparation">Preparation</label>
                     </div>
