--- a/recipestore/templates/edit_recipe.html
+++ b/recipestore/templates/edit_recipe.html
@@ -42,7 +42,7 @@
                     </div>
                     <!-- Ingredients input-->
                     <div class="mb-3">
-                        <textarea class="form-control validate" id="recipe_ingredients" name="recipe_ingredients" minlength="10" maxlength="1000"
+                        <textarea class="edit-box validate" id="recipe_ingredients" name="recipe_ingredients" minlength="10" maxlength="1000"
                         placeholder="Enter ingredients..." required>
                         {{- recipe.recipe_ingredients -}}
                         </textarea>
@@ -50,7 +50,7 @@
                     </div>
                     <!-- Preparation input-->
                     <div class="mb-3">
-                        <textarea class="form-control validate" id="recipe_preparation" name="recipe_preparation" minlength="10" maxlength="5000"
+                        <textarea class="edit-box validate" id="recipe_preparation" name="recipe_preparation" minlength="10" maxlength="5000"
                         placeholder="Enter preparation..." required>
                         {{- recipe.recipe_preparation -}}
                         </textarea>
