Add bottom padding to recipe info list

--- a/recipestore/static/css/style.css
+++ b/recipestore/static/css/style.css
@@ -11593,3 +11593,7 @@ html {
   border-radius: 0.5rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+.info-box {
+  padding-bottom: 1rem;
+}
