--- a/recipestore/templates/view_recipe.html
+++ b/recipestore/templates/view_recipe.html
@@ -14,7 +14,7 @@
 
         </div>
     </div>
-    <div class="container">
+    <div class="container info-box">
         <ul class="list-group">
             <li class="list-group-item"><strong>Cuisine: </strong>{{ recipe.cuisine }}</li>
             <li class="list-group-item"><strong>Total Time: </strong>{{ recipe.recipe_time }} minutes</li>
